# NLP

./: .gitignore  01_data_exploration.ipynb  02_monolingual_finetuning.ipynb  03_multilingual_finetuning.ipynb  04_evaluation_comparison.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  predict.py  utils.py
tests/: test_config.py  test_predict.py  test_utils.py
